# flagnator

./: Cargo.toml  README.md  diesel.toml  docker-compose.yml
migrations/2023-11-05-125129_create-organization/: down.sql  up.sql
migrations/2023-11-05-181951_create-project/: up.sql
src/: main.rs
src/business/: mod.rs
src/business/repositories/: feature_flag_repository.rs  mod.rs  organization_repository.rs  project_repository.rs
src/business/services/: hash_service.rs  mod.rs
src/business/use_cases/: mod.rs
src/business/use_cases/feature_flag/: create_feature_flag.rs  delete_feature_flag.rs  errors.rs  mod.rs  update_feature_flag.rs  update_feature_flag_name.rs
src/business/use_cases/organization/: create_organization.rs  errors.rs  mod.rs
src/business/use_cases/projects/: create_project.rs  errors.rs  mod.rs
src/domain/entities/: feature_flag.rs  mod.rs  organization.rs  project.rs  schedule.rs
src/infraestructure/database/: schema.rs
src/infrastructure/database/: database_connection.rs  error.rs  mod.rs  schema.rs
src/infrastructure/database/entities/: mod.rs  organization_diesel_entity.rs  project_diesel_entity.rs
src/infrastructure/database/mappers/: mod.rs  organization_db_mapper.rs  project_db_mapper.rs
src/infrastructure/database/repositories/: mod.rs  organization_diesel.rs  project_diesel.rs
src/shared/: mappers.rs  mod.rs
