[package]
name = "flagnator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = "0.4"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"

[dev-dependencies]
mockall = "0.11.4"  #
async-trait = "~0.1"